deploy/overlays/local/node-envida/components/federation-rest-gateway/federation-rest-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-federation-rest-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: federation.envida.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-federation-rest-route
  namespace: dh-health
spec:
  parentRefs:
    - name: envida-federation-rest-gateway
  hostnames:
    - federation.envida.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envida-federation-rest
          port: 8000
